--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <link rel="stylesheet" href="web/css/bootstrap.css">
 </head>
 <body>
-    
+
+    <script src="web/js/login.js"></script>
+    <script src="web/js/bootstrap.js"></script>
 </body>
 </html>
